Fixed: wflow-consoleweb - Datalist - paging links missing gap between the list. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/datalist8.css
+++ b/wflow-consoleweb/src/main/webapp/css/datalist8.css
@@ -156,6 +156,8 @@
     font-size:0;
     color:transparent;
     white-space: break-spaces;
+    display:inline-block;
+    margin-top: 5px;
 }
 body.rtl .dataList span.pagelinks{
     text-align:right;
